# mm-tools

./: .gitattributes  .pre-commit-config.yaml
.github/workflows/: find-all-tools.yml  tool-release.yml  tool-tests.yml
cwl_utils/: __init__.py  cwl_utilities.py
utils/acpype-plugin/: README.md  ict.yml  pyproject.toml
utils/append-ligand-plugin/: README.md  append_ligand.cwl  ict.yml  pyproject.toml
utils/array-indices-plugin/: .bumpversion.cfg  README.md  ict.yml  pyproject.toml
utils/autodock-vina-filter-plugin/: .bumpversion.cfg  README.md  autodock_vina_filter.cwl  ict.yml  pyproject.toml
utils/autodock-vina-rescore-plugin/: .bumpversion.cfg  Dockerfile  README.md  autodock_vina_rescore.cwl  ict.yml  pyproject.toml
utils/box-plugin/: .bumpversion.cfg  README.md  box.cwl  ict.yml  pyproject.toml
utils/box-plugin/tests/: __init__.py  test_box.py
utils/combine-structure-plugin/: .bumpversion.cfg  Dockerfile  README.md  build-docker.sh  combine_structure.cwl  ict.yml  pyproject.toml
utils/combine-structure-plugin/src/polus/mm/utils/combine_structure/: __init__.py  __main__.py  combine_structure.py
utils/combine-structure-plugin/tests/: 5umx_ligand.xyz  5umx_protein.xyz  __init__.py  test_combine_structure.py
utils/docking/autodock-vina/autodock-vina-run-tool/: .bumpversion.cfg  README.md  autodock_vina_run_0@1@0.cwl  build-docker.sh  ict.yml  pyproject.toml
utils/docking/autodock-vina/autodock-vina-run-tool/tests/: __init__.py  test_autodock_vina_run.py  vina_ligand.pdbqt  vina_receptor.pdbqt
utils/extract-model-plugin/: extract_model.cwl  ict.yml  pyproject.toml
utils/extract-model-plugin/tests/: __init__.py  test_extract_model.py
utils/extract-pdbids-drugbank-plugin/: .bumpversion.cfg  Dockerfile  README.md  build-docker.sh  environment.yml  extract_pdbids_drugbank.cwl  extract_pdbids_drugbank_0@1@0.cwl  ict.yml  pyproject.toml
utils/extract-pdbids-drugbank-plugin/src/polus/mm/utils/extract_pdbids_drugbank/: __init__.py  __main__.py  extract_pdbids_drugbank.py
utils/extract-pdbids-drugbank-plugin/tests/: __init__.py  drugbank_10_fake_records_5.1.10.xml  test_extract_pdbids_drugbank.py
utils/extract-pdbids-drugbank-xsdata-plugin/: .bumpversion.cfg  Dockerfile  README.md  build-docker.sh  extract_pdbids_drugbank_xsdata_0@1@0.cwl  ict.yml  pyproject.toml
utils/extract-pdbids-drugbank-xsdata-plugin/src/polus/mm/utils/extract_pdbids_drugbank_xsdata/: __init__.py  __main__.py  extract_pdbids_drugbank_xsdata.py
utils/extract-pdbids-drugbank-xsdata-plugin/tests/: __init__.py  test_extract_pdbids_drugbank_xsdata.py
utils/molecular-dynamics/config-tag-mdp-tool/: .bumpversion.cfg  README.md  config_tag_mdp_0@1@0.cwl  ict.yml  output_config_tag_mdp_workflow.json  pyproject.toml
utils/molecular-dynamics/config-tag-mdp-tool/autogenerated/: config_tag_mdp_workflow.cwl  config_tag_mdp_workflow_inputs.yml
utils/molecular-dynamics/config-tag-mdp-tool/autogenerated/config_tag_mdp_workflow__step__1__config_tag_mdp_0@1@0/: config_tag_mdp_0@1@0.cwl  config_tag_mdp_0@1@0_inputs.yml
utils/molecular-dynamics/config-tag-mdp-tool/provenance/config_tag_mdp_workflow/: bag-info.txt  manifest-sha1.txt  tagmanifest-sha1.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
utils/molecular-dynamics/config-tag-mdp-tool/provenance/config_tag_mdp_workflow/metadata/: manifest.json
utils/molecular-dynamics/config-tag-mdp-tool/provenance/config_tag_mdp_workflow/metadata/logs/: engine.49b7c1d9-09c2-4607-b6de-a68051d1aaca.txt
utils/molecular-dynamics/config-tag-mdp-tool/provenance/config_tag_mdp_workflow/metadata/provenance/: primary.cwlprov.json  primary.cwlprov.jsonld  primary.cwlprov.nt  primary.cwlprov.provn  primary.cwlprov.ttl  primary.cwlprov.xml
utils/molecular-dynamics/config-tag-mdp-tool/provenance/config_tag_mdp_workflow/workflow/: packed.cwl  primary-job.json
utils/molecular-dynamics/config-tag-mdp-tool/tests/: __init__.py  test_config_tag_mdp.py
utils/pdbfixer-plugin/: .bumpversion.cfg  Dockerfile  README.md  environment.yml  ict.yml  pdb_fixer.cwl  pyproject.toml
utils/pdbfixer-plugin/src/polus/mm/utils/pdbfixer/: __init__.py  __main__.py  pdbfixer.py
utils/pdbfixer-plugin/tests/: __init__.py  test_pdbfixer.py
utils/pre-process/structure-change/duplicate-tool/: .bumpversion.cfg  duplicate_0@1@0.cwl  ict.yml  pyproject.toml
utils/pre-process/structure-change/duplicate-tool/tests/: test_duplicate.py
utils/pre-process/structure-change/extract-ligand-protein-tool/: .bumpversion.cfg  Dockerfile  README.md  build-docker.sh  extract_ligand_protein_0.1.0.cwl  ict.yml  pyproject.toml
utils/pre-process/structure-change/extract-ligand-protein-tool/src/polus/mm/utils/extract_ligand_protein/: __init__.py  __main__.py  extract_ligand_protein.py
utils/pre-process/structure-change/extract-ligand-protein-tool/tests/: __init__.py  test_extract_ligand_protein.py
utils/pre-process/structure-change/rename-residues-mol-tool/: .bumpversion.cfg  Dockerfile  build-docker.sh  ict.yml  pyproject.toml  rename_residues_mol_0@1@0.cwl
utils/pre-process/structure-change/rename-residues-mol-tool/src/polus/mm/utils/rename_residues_mol/: rename_residues_mol.py
utils/pre-process/structure-change/rename-residues-mol-tool/tests/: 5umx_ligand.mol2  __init__.py  test_rename_residues_mol.py
utils/pymol-align-protein-ca-plugin/: .bumpversion.cfg  .gitattributes  Dockerfile  README.md  build-docker.sh  environment.yml  ict.yml  pymol_align_protein_ca.cwl  pymol_align_protein_ca_0@1@0.cwl  pyproject.toml
utils/pymol-align-protein-ca-plugin/src/polus/mm/utils/pymol_align_protein_ca/: __init__.py  __main__.py  pymol_align_protein_ca.py
utils/pymol-align-protein-ca-plugin/tests/: __init__.py  npt.gro  pose_ligand.xyz  prod.trr  receptor.xyz  test_pymol_align_protein_ca.py
utils/sanitize-ligand-plugin/: .bumpversion.cfg  Dockerfile  README.md  build-docker.sh  plugin.json  pyproject.toml  run-plugin.sh
utils/sanitize-ligand-plugin/src/polus/mm/utils/: __init__.py  __main__.py  sanitize_ligand.py
utils/sanitize-ligand-plugin/tests/: __init__.py  test_sanitize.py
(+508 files in other folders)
