[tool.poetry]
name = "polus-mm-utils-combine-structure"
version = "0.1.0"
description = "A tool that employs RDKit to combine two XYZ structures in a single PDB file."
authors = ["Data Scientist <data.scientist@labshare.org>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^7.4"
pytest-sugar = "^0.9.6"
pre-commit = "^3.2.1"
black = "^23.3.0"
mypy = "^1.1.1"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
