[tool.poetry]
name = "polus-mm-utils-extract-pdbids-drugbank-xsdata"
version = "0.1.0"
description = "Filter DrugBank database using xsData"
authors = ["Nazanin Donyapour <nazanin.donyapour@axleinfo.com>", "Brandon Walker <brandon.walker@axleinfo.com>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = "^0.7.0"
sophios = "0.1.4"
pandas = "2.2.2"
rdkit = "2024.3.5"

# Specifying xsdata-pydantic with extra options
xsdata-pydantic = { version = "*", extras = ["cli", "lxml", "soap"] }


# Specifying additional index and package
drugbank-schemas = { version = "0.1.4", source = "test-pypi"}

# Ensure the correct priority for the additional index
[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^7.4"
pytest-sugar = "^0.9.6"
pre-commit = "^3.2.1"
black = "^23.3.0"
mypy = "^1.1.1"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
