[tool.poetry]
name = "mm-polus-sanitize-ligand"
version = "0.1.1-dev1"
description = "Handle molecules with rdkit errors gracefully."
authors = ["Brandon Walker <brandon.walker@axleinfo.com>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
typer = "^0.7.0"
rdkit = "*"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^7.4"
pytest-sugar = "^0.9.6"
pre-commit = "^3.2.1"
black = "^23.3.0"
mypy = "^1.1.1"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
